# libelektra

./: .cirrus.yml  .clang-format  .cmake-format.yaml  .coveralls.yml  .gitattributes  .gitignore  .oclint  .restyled.yaml  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING  COPYING  ChangeLog  DartConfiguration.tcl  Doxyfile  ENVIRONMENT  GIT  INSTALL  Jenkinsfile.daily  LICENSE.md  Makefile  Makefile.am  Makefile.avi  Makefile.beforeautotools  Makefile.in  NEWS  README  README.md  SECURITY  TODO  VERSION  aclocal.m4  bootstrap.sh  config.fhs  config.h.in  configure  configure.ac  elektra.kdevelop  (+33 more)
benchmarks/: CMakeLists.txt  Makefile.am  README  README.md  STATISTICS  benchmarks.c  benchmarks.h  callgrind.out  callgrind.out.17609  callgrind.out.17749  callgrind.out.17871  changetracking.c  cmakecache.out  cmp.c  cpuinfo.out  createkeys.c  deepdup.c  default.ecf.out  diff.c  diffappend.c  info.out  kdb.c  kdbget.c  kdbmodify.c  large.c  memoryleak.c  mountpoint.c  opmph_benchmarks.c  opmph_benchmarks.h  opmph_hsearch.c  opmph_unordered_map.cpp  opmphm.c  output.out  plugingetset.c  result.out  results.out  storage.c  threads.c
benchmarks/data/: combined.yaml  generated.yaml  test.yaml
benchmarks/kslookup/: CMakeLists.txt  benchmark.c  benchmark.h  gendata.c  gendata.h  hsearch.c  kslookup.c  unorderedmap.cpp  unorderedmap_Build.cpp  unorderedmap_Build.hpp  unorderedmap_Interface.hpp  unorderedmap_Search.cpp  unorderedmap_Search.hpp
cmake/: CMakeLists.txt  ElektraCache.cmake  ElektraClasspath.cmake  ElektraCompiling.cmake  ElektraConfig.cmake.in  ElektraCoverage.cmake  ElektraDocSet.cmake  ElektraPackaging.cmake  ElektraPolicy.cmake  ElektraUninstall.cmake  ElektraUse.cmake  FindElektra.cmake.in  Platform.cmake  PrintDependencies.cmake  TestScript.cmake  elektra.pc.in  include_common.sh.in
cmake/Modules/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  ExportPluginSymbols.cmake  ExternalAntlr4Cpp.cmake  FindANTLR4CPP.cmake  FindANTLR4Cpp.cmake  FindAugeas.cmake  FindCppCMS.cmake  FindDBus.cmake  FindDL.cmake  FindDiscount.cmake  FindFA.cmake  FindGLib.cmake  FindGObjectIntrospection.cmake  FindGTest.cmake  FindGoogleTest.cmake  FindHaskell.cmake  FindIconv.cmake  FindLibBotan.cmake  FindLibEv.cmake  FindLibFA.cmake  FindLibGcrypt.cmake  FindLibGit2.cmake  FindLibGpgme.cmake  FindLibJWT.cmake  FindLibOpenSSL.cmake  FindLibRt.cmake  FindLibgcrypt.cmake  FindLua.cmake  FindLua52.cmake  FindMySqlCppConn.cmake  FindPEGTL.cmake  FindPluginprocess.cmake  FindPython2Interp.cmake  FindPython2Libs.cmake  FindSystemdJournal.cmake  FindXercesC.cmake  FindYAEP.cmake  FindYajl.cmake  FindZeroMQ.cmake  (+12 more)
cmake/Toolchain/: Toolchain-mingw-w64-x86_64.cmake  Toolchain-mingw32.cmake
doc/: API.md  APICHANGES  AUTHORS  AUTHORS.md  BIGPICTURE.md  BUGS  BUILDSERVER.md  CHANGES  CHANGES.md  CMakeLists.txt  CODING  CODING.md  COMPILE  COMPILE.md  COMPILERS  CONTRACT  CONTRACT.ini  COPYING  ChangeLog.major  ChangeLog.old  DEBUGGING.md  DESIGN  DESIGN.md  Doxyfile  ERROR_CONCEPT.md  FUTURE  GETSTARTED.md  GIT  GIT.md  GOALS  GOALS.md  GSOC2014.md  Git.md  IDEAS.md  INSTALL  INSTALL.md  KEYNAMES.md  LICENSE.md  METADATA.ini  Makefile  (+64 more)
doc/MarkdownLinkConverter/: README.md
doc/api_blueprints/: clusterd.apib  (+3 more)
example/: Makefile  Makefile.am  Makefile.avi  Makefile.in  application.c  backend.c  binary.c  example.c  fstab-convert  hierarchy.xml  hosts-convert  hwconfKudzu-convert  inittab-convert  key.c  keyNewExample.c  keyset.xml  lookup.c  network-convert  users-convert  xfree-convert
examples/: CMakeLists.txt  Makefile.am  application.c  backend.c  basename.c  binary.c  cascading.c  changetracking.c  cmerge.c  cut.c  example.c  functional.c  get.c  getset.c  gopts.c  goptsCommands.c  hello.c  helloElektra.c  hellokdb.c  hierarchy.xml  iterate.c  kdbget.c  kdbget_error.c  kdbintro.c  kdbopen.c  kdbset.c  keyBasename.c  keyCopy.c  keyCopyExample.c  keyMeta.c  keyMetaKeySet.c  keyName.c  keyNew.c  keyNewExample.c  keyset.c  keyset.xml  ksCallback.c  ksCut.c  ksIterate.c  ksLookupPop.c  (+18 more)
scripts/: CMakeLists.txt  Makefile.am  README.md  backup.in  benchmark-createtree  benchmark-yaml  benchmark-yaml.in  benchmark-yaml.in.sh  benchmark_augeas_hosts.sh  benchmark_libsplit.sh  benchmark_opmphm  build-debian-package  build-homepage  cbmc  change-resolver-symlink.in  change-storage-symlink.in  check-env-dep  check-third-party-license-file-paths  complexity.rb  configure-common  configure-debian  configure-debian-debug  configure-debian-log  configure-debian-musl  configure-debian-optimizations  configure-debian-wheezy  configure-debian-wheezy-local  configure-firefox.in  configure-home  configure-ini  configure-mingw  configure-mingw-w64  configure-xdg  convert-fstab  convert-hosts  convert-hwconfKudzu  convert-inittab  convert-network  convert-users  convert-xfree  (+93 more)
src/: CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.avi  Makefile.in  confignode.cpp  confignode.h  confignode.hpp  copykeycommand.cpp  copykeycommand.hpp  cpp_example_hierarchy.hpp  cutkeycommand.cpp  cutkeycommand.hpp  deletecommand.cpp  deletecommand.hpp  deletekeycommand.cpp  deletekeycommand.hpp  editcommand.cpp  editcommand.hpp  editkeycommand.hpp  kdb.c  kdb.h  kdbbackend.h  kdbprivate.h  kdbtools.c  kdbtools.h  key.c  keynode.cpp  keynode.hpp  keyset.c  keysetvisitor.cpp  keysetvisitor.hpp  libkdb.c  localkdb.c  main.cpp  newkeycommand.cpp  newkeycommand.hpp  printvisitor.cpp  printvisitor.hpp  (+16 more)
tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  basic_commands.sh  data_dbelow.c  data_filesys.c  data_others.c  data_passwd.c  dump_keyset.xml  filename.whitelist  fstab.xml  icheck.suppression  key.xml  keyset.c  keyset.xml  librt_test.c  linkchecker.whitelist  others.c  print_info.c  sanitizer.blacklist  test_args.c  test_array.c  test_backend.c  test_backendhelpers.c  test_buildbackend.c  test_cap.c  test_consistency.c  test_getset.c  test_internal.c  test_internals.c  test_kdb.c  test_key  test_key.c  test_keymeta.c  test_ks.c  test_meta.c  test_mount.c  test_mountsplit.c  (+24 more)
(+6657 files in other folders)
